--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "Provides REST and graphql API access to CEO, thedp's headless CMS.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2",
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "apollo-datasource-rest": "^0.9.4",
     "apollo-server": "^2.17.0",
     "apollo-server-express": "^2.18.2"
