--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "deploy": "gcloud app deploy"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.2",
     "apollo-datasource-rest": "^0.9.4",
     "apollo-server": "^2.17.0",
-    "apollo-server-express": "^2.18.2"
+    "apollo-server-express": "^2.18.2",
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "nodemon": "^2.0.2"
   }
 }
