--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "node-html-parser": "^2.2.1",
     "nodemon": "^2.0.2"
   }
 }
